<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context="com.square.haoya.sign.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/username_in"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="@string/username"
            android:background="@drawable/edit_bg"
            android:drawableRight="@drawable/dot_focus"
            />

        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:id="@+id/password_in"
            android:password="true"
            android:hint="@string/password"
            android:background="@drawable/edit_bg"
            android:drawableRight="@drawable/dot_focus"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:id="@+id/sign_in_up"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            />

        <Button
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:id="@+id/sign_in"
            android:text="@string/sign_in"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>


</LinearLayout>
