<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".sign.SignUpActivity">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>
    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:id="@+id/username_up"
            android:hint="@string/username"
            android:background="@drawable/edit_bg"
            android:drawableRight="@drawable/dot_focus"
            />
        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:id="@+id/password_up"
            android:password="true"
            android:hint="@string/password"
            android:background="@drawable/edit_bg"
            android:drawableRight="@drawable/dot_focus"
            />
        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:id="@+id/password_confirm"
            android:password="true"
            android:hint="@string/confirm_password"
            android:background="@drawable/edit_bg"
            android:drawableRight="@drawable/dot_focus"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        >

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/submit_up"
            android:text="@string/submit"
            android:textSize="20sp"
            />

    </LinearLayout>

</LinearLayout>
