<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.square.haoya.sign.PhoneVerifyActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_verify"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"
            />

        <ImageButton
            android:id="@+id/back_sign_up"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:layout_gravity="left"
            android:src="@drawable/dot_focus"
            android:background="@color/colorPrimary"
            />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        >
        <EditText
            android:id="@+id/phone_verify_code"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:paddingLeft="5dp"
            android:layout_gravity="center"
            android:background="@drawable/edit_bg"
            android:hint="@string/verify_number"
            />
        <Button
            android:id="@+id/phone_verify_next"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textSize="20sp"
            />
    </LinearLayout>
</LinearLayout>
